--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,8 +1,6 @@
 <footer>
     <div class="container">
-        <div class="title">
-            GET IN TOUCH
-        </div>
+        <h3 class="font-weight-bolder">GET IN TOUCH</h3>
         <div class="telephone">
             {{ site.data.information.tel }}
         </div>
