--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,24 +1,20 @@
 <header>
-    <nav class="navbar navbar-default navbar-fixed-top">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
         <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="#">
-                    <img src="/img/transparent_logo.png" class="logo" alt="">
-                </a>
-            </div>
-            <div class="collapse navbar-collapse" id="myNavbar">
-                <ul class="nav navbar-nav navbar-right">
+            <a class="navbar-brand" href="#">
+                <img src="/img/transparent_logo.png" class="logo" alt="">
+            </a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar_header"
+                aria-controls="navbar_header" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <div class="collapse navbar-collapse" id="navbar_header">
+                <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
                     {% for item in site.data.primary_nav %}
-                    {% if page.url contains item.link %}
-                    <li><a href="{{item.link}}" class="active">{{item.title}}</a></li>
-                    {% else %}
-                    <li><a href="{{item.link}}">{{item.title}}</a></li>
-                    {% endif %}
+                    <li><a class="nav-link 
+                    {% if page.url contains item.link %}active{% endif %}
+                    mx-2" href="{{item.link}}">{{item.title}}</a></li>
                     {% endfor %}
                 </ul>
             </div>
