--- a/_sass/_style.scss
+++ b/_sass/_style.scss
@@ -9,6 +9,14 @@ $sm: 768px;
 $md: 992px;
 $lg: 1200px;
 
+html, body{
+  width: 100%;
+  height: 100%;
+  margin: 0px;
+  padding: 0px;
+  overflow-x: hidden;
+}
+
 @media (max-width: 768px) {
 }
 @media (min-width: 768px) {
