--- a/_includes/header.html
+++ b/_includes/header.html
@@ -13,7 +13,7 @@
                 <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
                     {% for item in site.data.primary_nav %}
                     <li><a class="nav-link 
-                    {% if page.url contains item.link %}active{% endif %}
+                    {% if page.url == item.link %}active{% endif %}
                     mx-2" href="{{item.link}}">{{item.title}}</a></li>
                     {% endfor %}
                 </ul>
