--- a/_sass/_style.scss
+++ b/_sass/_style.scss
@@ -14,7 +14,7 @@ html, body{
   height: 100%;
   margin: 0px;
   padding: 0px;
-  overflow-x: hidden;
+  // overflow-x: hidden;
 }
 
 @media (max-width: 768px) {
@@ -258,7 +258,7 @@ html {
     position: relative;
     margin: 0;
     padding: 150px 0px;
-    max-width: 900px;
+    max-width: 800px;
   }
 
   .btn_custom {
@@ -296,5 +296,60 @@ html {
         }
       }
     }
+  }
+}
+
+.item{
+  clear: both;
+  .item_icon {
+    display: inline-block;
+    width: 60px;
+    height: 70px;
+    float: left;
+    overflow: hidden;
+    margin-top: 0.5em;
+    img{
+      width: 100%;
+      height: auto;
+    }
+  }
+  
+  .item_title {
+    text-align: start;
+    margin-top: 20px;
+    margin-left: 80px;
+    margin-bottom: 30px;
+  }
+  
+  .item_text {
+  }
+}
+
+.slideanim {visibility:hidden;}
+.slide {
+  animation-name: slide;
+  -webkit-animation-name: slide;
+  animation-duration: 1s;
+  -webkit-animation-duration: 1s;
+  visibility: visible;
+}
+@keyframes slide {
+  0% {
+    opacity: 0;
+    transform: translateY(50%);
+  } 
+  100% {
+    opacity: 1;
+    transform: translateY(0%);
+  }
+}
+@-webkit-keyframes slide {
+  0% {
+    opacity: 0;
+    -webkit-transform: translateY(50%);
+  } 
+  100% {
+    opacity: 1;
+    -webkit-transform: translateY(0%);
   }
 }
