--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@
 
     {% feed_meta %}
 
-    <link rel="icon" type="image/x-icon" href="/img/logo.ico" />
+    <link rel="icon" type="image/x-icon" href="/assets/images/ui/logo.ico" />
     <link href="/assets/css/app.css" type="text/css" rel="stylesheet" />
     
     <script src="/assets/js/app_header.js"></script>
