--- a/assets/v3/css/supported-languages.css
+++ b/assets/v3/css/supported-languages.css
@@ -1,4 +1,4 @@
-﻿.support_lang_banner{min-height: 244px;padding: 40px 0;background: url('/assets/images/ui/supported-languages-banner.jpg') no-repeat;background-size: cover; }
+﻿.support_lang_banner{min-height: 244px;padding: 40px 0;background: no-repeat;background-size: cover; }
 .support_lang_banner .text_row{margin-top: 35px;}
 .support_lang_banner .heading{font-size: 40px;}
 .supported-languages-holder{background-color: #f2f5f8; padding:30px 0; text-align:center;}
