--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,6 +28,8 @@
         </div>
     </div><!-- class="container" END -->
 
+    <script src="/assets/v3/js/jquery.matchHeight.js" type="text/javascript"></script>
+
     <script src="/assets/js/app_footer.js"></script>
 
     <script type="text/javascript">
